# hunt

./: Cargo.toml  LICENCE  README.md
.cargo/: config
src/: conf.rs  main.rs  prelude.rs
src/components/: camera.rs  mod.rs  walls.rs
src/entities/: mod.rs  predator.rs  prey.rs
src/properties/: mod.rs
src/resources/: mod.rs
